--- a/lab1/rapport.ipynb
+++ b/lab1/rapport.ipynb
@@ -2,19 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "quad"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     " Fonction qui résout une équation polynomiale du second degré\n",
@@ -28,6 +18,81 @@
     "    return (r1,r2)\n",
     "end"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "is_symmetric_positive_definite (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "using LinearAlgebra\n",
+    "\n",
+    "\"\"\"\n",
+    " Fonction qui vérifie si une matrice est symétrique définie positive\n",
+    "\"\"\"\n",
+    "\n",
+    "function is_symmetric_positive_definite(A)\n",
+    "    # Matrice doit être carrée\n",
+    "    if size(A, 1) != size(A, 2)\n",
+    "        return false\n",
+    "    end\n",
+    "    \n",
+    "    # Matrice doit être symétrique\n",
+    "    if A != transpose(A)\n",
+    "        return false\n",
+    "    end\n",
+    "    \n",
+    "    # Matrice doit être définie positive\n",
+    "    eigenvalues = eigen(A).values\n",
+    "    for val in eigenvalues\n",
+    "        if val <= 0\n",
+    "            return false\n",
+    "        end\n",
+    "    end\n",
+    "    return true\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Le résultat du test positif est : true\n",
+      "Le résultat du test négatif est : false\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test positif\n",
+    "A1 = [4.0 1.0 2.0; 1.0 5.0 3.0; 2.0 3.0 6.0]\n",
+    "println(\"Le résultat du test positif est : \", is_symmetric_positive_definite(A1))\n",
+    "\n",
+    "# Test négatif\n",
+    "A2 = [1.0 2.0 3.0; 4.0 5.0 6.0; 7.0 8.0 9.0]\n",
+    "println(\"Le résultat du test négatif est : \", is_symmetric_positive_definite(A2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
