--- a/lab2/Lab2-notebook.ipynb
+++ b/lab2/Lab2-notebook.ipynb
@@ -1941,7 +1941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2014,7 +2014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -2743,7 +2743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2770,22 +2770,22 @@
     "  t0 = time()\n",
     "   \n",
     "  verbose && @printf \"%2s %9s %9s\\n\" \"k\" \"fk\" \"||∇f(x)||\"\n",
-    "  verbose && @printf \"%2d %9.2e %9.1e\\n\" k fk gnorm\n",
+    "  #verbose && @printf \"%2d %9.2e %9.1e\\n\" k fk gnorm\n",
     "  while gnorm > 1.0e-6 + 1.0e-6 * gnorm0 && k < 100\n",
-    "    \n",
-    "    \n",
-    "\n",
+    "    dk = -Hk * gk\n",
     "    t = armijo(xk, dk, fk, gk, x -> obj(nlp, x))\n",
+    "\n",
+    "    verbose && @printf \"%2d %9.2e %9.1e %7.1e \\n\" k fk gnorm t\n",
+    "\n",
     "    xk1 = xk + t * dk\n",
     "    sk = xk1 - xk\n",
     "    yk = grad(nlp, xk1) - grad(nlp, xk)\n",
     "    rhok = 1 / (transpose(yk) * sk)\n",
-    "    Hk = (I - rhok*sk*transpose(yk)) * Hk * (I-rhok*yk*transpose(sk)) + rhok*sk*transpose(sk) # H(k+1) est Hk pour la prochaine itération\n",
+    "    #Hk1 = (I - rhok*sk*transpose(yk)) * Hk * (I-rhok*yk*transpose(sk)) + rhok*sk*transpose(sk) \n",
     "\n",
     "    if transpose(yk)*sk > 0 # version skip\n",
-    "      fk = obj(nlp, xk)\n",
-    "      dk = -Hk * gk\n",
-    "      verbose && @printf \"%2d %9.2e %9.1e %7.1e \\n\" k fk gnorm t\n",
+    "      Hk1 = (I - rhok*sk*transpose(yk)) * Hk * (I-rhok*yk*transpose(sk)) + rhok*sk*transpose(sk) \n",
+    "      #verbose && @printf \"%2d %9.2e %9.1e %7.1e \\n\" k fk gnorm t\n",
     "\n",
     "      if fk < -1e-15\n",
     "        println(\"problème non borné\")\n",
@@ -2797,23 +2797,24 @@
     "        println(\"limite de temps atteinte\")\n",
     "        break\n",
     "      end\n",
-    "\n",
+    "      Hk = Hk1\n",
     "    end\n",
     "\n",
     "    k += 1\n",
-    "    xk = xk1    \n",
+    "    xk = xk1   \n",
+    "    #Hk = Hk1 \n",
+    "    fk = obj(nlp, xk)\n",
     "    gk = grad(nlp, xk)\n",
     "    gnorm = norm(gk)\n",
-    "  \n",
-    "  end\n",
-    "  \n",
+    "\n",
+    "  end \n",
     "  return xk\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2821,15 +2822,17 @@
      "output_type": "stream",
      "text": [
       " k        fk ||∇f(x)||\n",
-      " 0  0.00e+00   0.0e+00\n"
+      " 0  6.08e-01   3.4e+00 3.0e-01 \n",
+      " 1 -3.58e-01   1.4e+00 1.0e+00 \n",
+      "problème non borné\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "2-element Vector{Float64}:\n",
-       " 0.0\n",
-       " 0.0"
+       "  0.4\n",
+       " -0.5955555555555556"
       ]
      },
      "metadata": {},
@@ -2839,8 +2842,8 @@
    "source": [
     "#Test\n",
     "f(x) = x[1]^2 * (2*x[1] - 3) - 6*x[1]*x[2] * (x[1] - x[2] - 1)\n",
-    "nlp = ADNLPModel(f, zeros(2))\n",
-    "bfgs_quasi_newton_armijo(nlp, zeros(2))"
+    "nlp = ADNLPModel(f, 0.1*ones(2))\n",
+    "bfgs_quasi_newton_armijo(nlp, 0.4*ones(2))"
    ]
   },
   {
