--- a/lab2/Lab2-notebook.ipynb
+++ b/lab2/Lab2-notebook.ipynb
@@ -1941,7 +1941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1959,7 +1959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1981,7 +1981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2014,7 +2014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -2041,7 +2041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2076,13 +2076,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "newton_armijo (generic function with 2 methods)"
+       "newton_armijo (generic function with 1 method)"
       ]
      },
      "metadata": {},
@@ -2122,7 +2122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2130,16 +2130,16 @@
      "output_type": "stream",
      "text": [
       " k        fk ||∇f(x)||\n",
-      " 0  1.00e+00   4.5e+00\n"
+      " 0  1.00e+00   4.5e+00\n",
+      " 1  5.08e-02   8.4e-01 1.0e+00 \n",
+      " 2  4.73e-04   7.6e-02 1.0e+00 \n",
+      " 3  6.97e-08   9.1e-04 1.0e+00 \n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 1  5.08e-02   8.4e-01 1.0e+00 \n",
-      " 2  4.73e-04   7.6e-02 1.0e+00 \n",
-      " 3  6.97e-08   9.1e-04 1.0e+00 \n",
       " 4  1.62e-15   1.4e-07 1.0e+00 \n"
      ]
     },
@@ -2183,17 +2183,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
-     "ename": "LoadError",
-     "evalue": "LoadError: UndefVarError: `@printf` not defined\nin expression starting at c:\\Documents\\optimisation\\MTH8408-Hiv24\\lab2\\Lab2-notebook.ipynb:14",
-     "output_type": "error",
-     "traceback": [
-      "LoadError: UndefVarError: `@printf` not defined\n",
-      "in expression starting at c:\\Documents\\optimisation\\MTH8408-Hiv24\\lab2\\Lab2-notebook.ipynb:14\n"
-     ]
+     "data": {
+      "text/plain": [
+       "newton_armijo (generic function with 2 methods)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -2259,7 +2259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2267,7 +2267,13 @@
      "output_type": "stream",
      "text": [
       " k        fk ||∇f(x)||\n",
-      " 0  5.00e+00   1.2e+01\n",
+      " 0  5.00e+00   1.2e+01\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       " 1  4.07e-01   2.7e+00 1.0e+00 \n",
       " 2  1.39e-02   4.3e-01 1.0e+00 \n",
       " 3  4.63e-05   2.4e-02 1.0e+00 \n",
@@ -2299,7 +2305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -2407,7 +2413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2430,7 +2436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -2460,13 +2466,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.482534153247273e-16"
+       "0.0"
       ]
      },
      "metadata": {},
@@ -2488,7 +2494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -2509,7 +2515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -2517,14 +2523,21 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "LDLFactorizations.LDLFactorization{Float64, Int64, Int64, Int64}(true, false, true, 2"
+      "LDLFactorizations.LDLFactorization{Float64, Int64, Int64, Int64}(true, false, true, "
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ", [2, -1], [1, 0], [2, 2], [1, 2], [1, 2], [1, 2, 2], [1, 1, 1], Int64[], [140735517207552], [6.9532584621219e-310], [7.124747290567e-312, 7.124747290726e-312], [3.0e-323, 4.4e-323], [5, 8], 0.0, 0.0, 0.0, 2)"
+      "2, [2, -1], [1, 0], [2, 2], [1, 2], [1, 2], [1, 2, 2], [1, 1, 1], Int64[], [2349396136672], [2.54639494965e-313], [5.0e-324, 0.0"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "], [1.161375272501e-311, 1.161375219324e-311], [2350649613264, 2350649574960], 0.0, 0.0, 0.0, 2)"
      ]
     }
    ],
@@ -2538,15 +2551,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "2-element Vector{Float64}:\n",
-       " 7.124747290567e-312\n",
-       " 7.124747290726e-312"
+       " 5.0e-324\n",
+       " 0.0"
       ]
      },
      "metadata": {},
@@ -2566,15 +2579,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "2-element Vector{Float64}:\n",
-       " 7.124747290567e-312\n",
-       " 7.124747290726e-312"
+       " 5.0e-324\n",
+       " 0.0"
       ]
      },
      "metadata": {},
@@ -2608,7 +2621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -2658,7 +2671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -2743,7 +2756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -2814,25 +2827,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " k        fk ||∇f(x)||\n",
-      " 0  6.08e-01   3.4e+00 3.0e-01 \n",
-      " 1 -3.58e-01   1.4e+00 1.0e+00 \n",
-      "problème non borné\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "2-element Vector{Float64}:\n",
-       "  0.4\n",
-       " -0.5955555555555556"
+       "ADNLPModel - Model with automatic differentiation backend ADModelBackend{\n",
+       "  ForwardDiffADGradient,\n",
+       "  ForwardDiffADHvprod,\n",
+       "  EmptyADbackend,\n",
+       "  EmptyADbackend,\n",
+       "  EmptyADbackend,\n",
+       "  ForwardDiffADHessian,\n",
+       "  EmptyADbackend,\n",
+       "}\n",
+       "  Problem name: Generic\n",
+       "   All variables: ████████████████████ 2      All constraints: ⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅ 0     \n",
+       "            free: ████████████████████ 2                 free: ⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅ 0     \n",
+       "           lower: ⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅ 0                lower: ⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅ 0     \n",
+       "           upper: ⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅ 0                upper: ⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅ 0     \n",
+       "         low/upp: ⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅ 0              low/upp: ⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅ 0     \n",
+       "           fixed: ⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅ 0                fixed: ⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅ 0     \n",
+       "          infeas: ⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅ 0               infeas: ⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅ 0     \n",
+       "            nnzh: (  0.00% sparsity)   3               linear: ⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅ 0     \n",
+       "                                                    nonlinear: ⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅ 0     \n",
+       "                                                         nnzj: (------% sparsity)         \n",
+       "\n",
+       "  Counters:\n",
+       "             obj: ⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅ 0                 grad: ⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅ 0                 cons: ⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅ 0     \n",
+       "        cons_lin: ⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅ 0             cons_nln: ⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅ 0                 jcon: ⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅ 0     \n",
+       "           jgrad: ⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅ 0                  jac: ⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅ 0              jac_lin: ⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅ 0     \n",
+       "         jac_nln: ⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅ 0                jprod: ⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅ 0            jprod_lin: ⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅ 0     \n",
+       "       jprod_nln: ⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅ 0               jtprod: ⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅ 0           jtprod_lin: ⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅ 0     \n",
+       "      jtprod_nln: ⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅ 0                 hess: ⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅ 0                hprod: ⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅ 0     \n",
+       "           jhess: ⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅ 0               jhprod: ⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅ 0     \n"
       ]
      },
      "metadata": {},
@@ -2840,70 +2869,10 @@
     }
    ],
    "source": [
+    "\n",
     "#Test\n",
     "f(x) = x[1]^2 * (2*x[1] - 3) - 6*x[1]*x[2] * (x[1] - x[2] - 1)\n",
-    "nlp = ADNLPModel(f, 0.1*ones(2))\n",
-    "bfgs_quasi_newton_armijo(nlp, 0.4*ones(2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " k        fk ||∇f(x)||\n",
-      " 0  1.74e+05   3.3e+04\n",
-      "limite d'itérations atteinte\n",
-      "\u001b[91m\u001b[1mTest Failed\u001b[22m\u001b[39m at \u001b[39m\u001b[1mc:\\Documents\\optimisation\\MTH8408-Hiv24\\lab2\\Lab2-notebook.ipynb:20\u001b[22m\n",
-      "  Expression: norm(grad(himmelblau, sol)) ≤ ep1\n",
-      "   Evaluated: 32866.53799839588 ≤ 0.032867537998395875\n",
-      "\n"
-     ]
-    },
-    {
-     "ename": "Test.FallbackTestSetException",
-     "evalue": "Test.FallbackTestSetException(\"There was an error during testing\")",
-     "output_type": "error",
-     "traceback": [
-      "Test.FallbackTestSetException(\"There was an error during testing\")\n",
-      "\n",
-      "Stacktrace:\n",
-      " [1] record(ts::Test.FallbackTestSet, t::Union{Test.Error, Test.Fail})\n",
-      "   @ Test C:\\Users\\thasa\\AppData\\Local\\Programs\\Julia-1.10.0\\share\\julia\\stdlib\\v1.10\\Test\\src\\Test.jl:1000\n",
-      " [2] do_test(result::Test.ExecutionResult, orig_expr::Any)\n",
-      "   @ Test C:\\Users\\thasa\\AppData\\Local\\Programs\\Julia-1.10.0\\share\\julia\\stdlib\\v1.10\\Test\\src\\Test.jl:705\n",
-      " [3] macro expansion\n",
-      "   @ C:\\Users\\thasa\\AppData\\Local\\Programs\\Julia-1.10.0\\share\\julia\\stdlib\\v1.10\\Test\\src\\Test.jl:672 [inlined]\n",
-      " [4] top-level scope\n",
-      "   @ c:\\Documents\\optimisation\\MTH8408-Hiv24\\lab2\\Lab2-notebook.ipynb:20"
-     ]
-    }
-   ],
-   "source": [
-    "fH(x) = (x[2]+x[1].^2-11).^2+(x[1]+x[2].^2-7).^2\n",
-    "x0H = [10., 20.]\n",
-    "himmelblau = ADNLPModel(fH, x0H)\n",
-    "\n",
-    "problem2 = ADNLPModel(x->-x[1]^3 + x[2]^2 + x[3]^2, ones(3))\n",
-    "\n",
-    "roz(x) = 100 *  (x[2] - x[1]^2)^2 + (x[1] - 1.0)^2\n",
-    "rosenbrock = ADNLPModel(roz, [-1.2, 1.0])\n",
-    "\n",
-    "f(x) = x[1]^2 * (2*x[1] - 3) - 6*x[1]*x[2] * (x[1] - x[2] - 1)\n",
-    "pb_du_cours = ADNLPModel(f, [-1.001, -1.001]) #ou [1.5, .5] ou [.5, .5]\n",
-    "\n",
-    "\n",
-    "######################################### bfgs_quasi_newton_armijo ##################\n",
-    "\n",
-    "#Unit/Validation Tests\n",
-    "using Logging, Test\n",
-    "ep1 = 1e-6 + norm(grad(himmelblau, himmelblau.meta.x0)) * 1e-6\n",
-    "sol = bfgs_quasi_newton_armijo(himmelblau, himmelblau.meta.x0) \n",
-    "@test norm(grad(himmelblau, sol)) ≤ ep1"
+    "nlp = ADNLPModel(f, zeros(2))"
    ]
   },
   {
@@ -2922,16 +2891,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: using ADNLPProblems.rosenbrock in module Main conflicts with an existing identifier.\n"
+     ]
+    }
+   ],
    "source": [
     "using ADNLPModels, OptimizationProblems.ADNLPProblems, Test # Attention si vous ne faites pas using ADNLPModels avant ça ne fonctionne pas!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -2959,7 +2936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -3003,7 +2980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -3086,20 +3063,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
-     "ename": "UndefVarError",
-     "evalue": "UndefVarError: `unconstrained` not defined",
-     "output_type": "error",
-     "traceback": [
-      "UndefVarError: `unconstrained` not defined\n",
-      "\n",
-      "Stacktrace:\n",
-      " [1] top-level scope\n",
-      "   @ c:\\Documents\\optimisation\\MTH8408-Hiv24\\lab2\\Lab2-notebook.ipynb:1"
-     ]
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -3108,21 +3082,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " k        fk ||∇f(x)||\n"
+      " k        fk ||∇f(x)||\n",
+      " 0  1.87e+03   3.0e+02\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 0  1.87e+03   3.0e+02\n",
       " 1  1.84e+03   2.4e+02 5.9e-02 \n"
      ]
     },
@@ -3130,16 +3104,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 2  1.81e+03   1.4e+02 4.4e-01 \n",
-      " 3  1.78e+03   2.4e+02 "
+      " 2  1.81e+03   1.4e+02 4.4e-01 \n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7.7e-03 \n",
-      " 4  1.74e+03   2.3e+02 3.4e-03 \n",
+      " 3  1.78e+03   2.4e+02 7.7e-03 \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 4  1.74e+03   2.3e+02 3.4e-03 \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       " 5  1.72e+03   4.0e+02 5.1e-03 \n"
      ]
     },
@@ -3350,7 +3335,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "35  6.05e+02   2.5e+02 1.3e-01 \n",
+      "35  6.05e+02   2.5e+02 1.3e-01 \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "36  5.97e+02   1.8e+02 4.4e-01 \n"
      ]
     },
@@ -3512,7 +3503,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "59  5.54e+02   6.3e+01 1.0e-03 \n",
+      "59  5.54e+02   6.3e+01 1.0e-03 \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "60  5.53e+02   5.3e+01 1.0e-03 \n"
      ]
     },
